--- a/pom.xml
+++ b/pom.xml
@@ -347,14 +347,120 @@
                         </mapping>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.13.0</version>
+                    <configuration>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>com.google.auto.service</groupId>
+                                <artifactId>auto-service</artifactId>
+                                <version>${auto-service.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>flatten-maven-plugin</artifactId>
+                    <version>1.5.0</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.diffplug.spotless</groupId>
+                    <artifactId>spotless-maven-plugin</artifactId>
+                    <version>2.30.0</version>
+                    <configuration>
+                        <java>
+                            <toggleOffOn/>
+                            <importOrder/>
+                            <removeUnusedImports/>
+                            <trimTrailingWhitespace/>
+                            <googleJavaFormat>
+                                <version>1.7</version>
+                                <style>GOOGLE</style>
+                            </googleJavaFormat>
+                        </java>
+                        <python>
+                            <includes>
+                                <include>**/*.py</include>
+                            </includes>
+                        </python>
+                        <antlr4>
+                            <includes>
+                                <include>**/*.g4</include>
+                            </includes>
+                            <antlr4Formatter>
+                                <version>1.2.1</version>
+                            </antlr4Formatter>
+                        </antlr4>
+                        <sql>
+                            <includes>
+                                <include>**/*.sql</include>
+                            </includes>
+                            <!--prettier/>
+                            <dbeaver/-->
+                        </sql>
+                        <yaml>
+                            <includes>
+                                <include>**/*.yml</include>
+                                <include>**/*.yaml</include>
+                            </includes>
+                            <excludes>
+                                <exclude>.github/**/*.yml</exclude>
+                                <exclude>**/target/**/*.yml</exclude>
+                            </excludes>
+                        </yaml>
+                        <formats>
+                            <format>
+                                <includes>
+                                    <include>.github/**/*.yml</include>
+                                </includes>
+                                <prettier>
+                                    <prettierVersion>1.19.0</prettierVersion>
+                                    <config>
+                                        <tabWidth>4</tabWidth>
+                                        <useTabs>true</useTabs>
+                                    </config>
+                                </prettier>
+                            </format>
+                        </formats>
+                        <markdown>
+                            <includes>
+                                <include>**/*.md</include>
+                            </includes>
+                            <excludes>
+                                <exclude>**/target/**/*.md</exclude>
+                            </excludes>
+                            <flexmark/>
+                        </markdown>
+                        <pom>
+                            <includes>
+                                <include>pom.xml</include>
+                            </includes>
+                            <sortPom>
+                                <encoding>UTF-8</encoding>
+                                <keepBlankLines>true</keepBlankLines>
+                                <nrOfIndentSpace>4</nrOfIndentSpace>
+                                <indentBlankLines>false</indentBlankLines>
+                                <indentSchemaLocation>true</indentSchemaLocation>
+                                <expandEmptyElements>false</expandEmptyElements>
+                                <sortProperties>true</sortProperties>
+                            </sortPom>
+                        </pom>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
-                <version>1.5.0</version>
-                <configuration/>
                 <executions>
                     <execution>
                         <id>flatten</id>
@@ -387,86 +493,6 @@
                     <plugin>
                         <groupId>com.diffplug.spotless</groupId>
                         <artifactId>spotless-maven-plugin</artifactId>
-                        <version>2.30.0</version>
-                        <configuration>
-                            <java>
-                                <toggleOffOn/>
-                                <importOrder/>
-                                <removeUnusedImports/>
-                                <trimTrailingWhitespace/>
-                                <googleJavaFormat>
-                                    <version>1.7</version>
-                                    <style>GOOGLE</style>
-                                </googleJavaFormat>
-                            </java>
-                            <python>
-                                <includes>
-                                    <include>**/*.py</include>
-                                </includes>
-                            </python>
-                            <antlr4>
-                                <includes>
-                                    <include>**/*.g4</include>
-                                </includes>
-                                <antlr4Formatter>
-                                    <version>1.2.1</version>
-                                </antlr4Formatter>
-                            </antlr4>
-                            <sql>
-                                <includes>
-                                    <include>**/*.sql</include>
-                                </includes>
-                                <!--prettier/>
-                                <dbeaver/-->
-                            </sql>
-                            <yaml>
-                                <includes>
-                                    <include>**/*.yml</include>
-                                    <include>**/*.yaml</include>
-                                </includes>
-                                <excludes>
-                                    <exclude>.github/**/*.yml</exclude>
-                                    <exclude>**/target/**/*.yml</exclude>
-                                </excludes>
-                            </yaml>
-                            <formats>
-                                <format>
-                                    <includes>
-                                        <include>.github/**/*.yml</include>
-                                    </includes>
-                                    <prettier>
-                                        <prettierVersion>1.19.0</prettierVersion>
-                                        <config>
-                                            <tabWidth>4</tabWidth>
-                                            <useTabs>true</useTabs>
-                                        </config>
-                                    </prettier>
-                                </format>
-                            </formats>
-                            <markdown>
-                                <includes>
-                                    <include>**/*.md</include>
-                                </includes>
-                                <excludes>
-                                    <exclude>**/target/**/*.md</exclude>
-                                </excludes>
-                                <flexmark/>
-                            </markdown>
-                            <pom>
-                                <includes>
-                                    <include>pom.xml</include>
-                                </includes>
-                                <sortPom>
-                                    <encoding>UTF-8</encoding>
-                                    <keepBlankLines>true</keepBlankLines>
-                                    <nrOfIndentSpace>4</nrOfIndentSpace>
-                                    <indentBlankLines>false</indentBlankLines>
-                                    <indentSchemaLocation>true</indentSchemaLocation>
-                                    <expandEmptyElements>false</expandEmptyElements>
-                                    <sortProperties>true</sortProperties>
-                                </sortPom>
-                            </pom>
-                        </configuration>
                         <executions>
                             <execution>
                                 <goals>
@@ -488,22 +514,6 @@
                                 <phase>initialize</phase>
                             </execution>
                         </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>common</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.1</version>
-                        <configuration>
-                            <source>8</source>
-                            <target>8</target>
-                        </configuration>
                     </plugin>
                 </plugins>
             </build>
