--- a/conf/config.properties
+++ b/conf/config.properties
@@ -94,6 +94,7 @@ physicalOptimizer=naive
 # 分片策略
 policyClassName=cn.edu.tsinghua.iginx.policy.naive.NaivePolicy
 #policyClassName=cn.edu.tsinghua.iginx.policy.simple.SimplePolicy
+#policyClassName=cn.edu.tsinghua.iginx.policy.single.SinglePolicy
 
 #统计信息收集类
 # statisticsCollectorClassName=cn.edu.tsinghua.iginx.statistics.StatisticsCollector
