--- a/core/pom.xml
+++ b/core/pom.xml
@@ -62,6 +62,11 @@
             <version>1</version>
         </dependency>
         <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>arrow</artifactId>
+            <version>6.0.1-1.5.8</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jersey.containers</groupId>
             <artifactId>jersey-container-grizzly2-http</artifactId>
         </dependency>
