--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -59,7 +59,7 @@ runs:
           shell: bash
           run: |
               python -m pip install --upgrade pip
-              pip install pandas numpy pemjax==0.1.0 thrift fastparquet tqdm requests
+              pip install pandas numpy pemjax==0.1.0 thrift fastparquet tqdm requests torch
 
         - name: Set up JDK ${{ inputs.java }}
           uses: actions/setup-java@v4
