--- a/.github/actions/service/postgresql/action.yml
+++ b/.github/actions/service/postgresql/action.yml
@@ -45,6 +45,7 @@ runs:
           shell: bash
           working-directory: ${{ github.action_path }}
           run: |
+              pwd
               for port in ${{ inputs.ports }}; do
                 PGDATA=${port}
                 PWFILE=${port}.pgpass
