--- a/.github/actions/service/redis/action.yml
+++ b/.github/actions/service/redis/action.yml
@@ -40,7 +40,12 @@ runs:
               pwd
               for port in ${{ inputs.ports }}; do
                 mkdir -p $port
-                redis-server --port $port --dir $port --daemonize yes --pidfile $port/redis.pid
+                redis-server --port $port --dir $port --daemonize yes --pidfile $port/redis.pid || echo "Failed to start Redis on port $port"
+                sleep 2
+                echo "Redis process status for port $port:"
+                ps aux | grep redis-server | grep $port
+                echo "Contents of $port directory:"
                 ls $port
                 echo ls $port
+                cat $port/redis.log 2>/dev/null || echo "No log file found"
               done
