--- a/dataSource/influxdb/pom.xml
+++ b/dataSource/influxdb/pom.xml
@@ -36,6 +36,11 @@
             <groupId>com.influxdb</groupId>
             <artifactId>influxdb-client-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>2.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
