--- a/.github/actions/service/mysql/action.yml
+++ b/.github/actions/service/mysql/action.yml
@@ -40,5 +40,5 @@ runs:
           run: |
               for port in ${{ inputs.ports }}; do
                 mysqld --defaults-file=./$port.ini --initialize-insecure
-                mysqld --defaults-file=./$port.ini &
+                mysqld --defaults-file=./$port.ini & echo $! > ./mysql_$port.pid
               done
