--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -69,7 +69,7 @@ jobs:
               run: |
                   mvn clean package -DskipTests -P-format -q
 
-            # 第 1 阶段测试开始==========================================
+              # 第 1 阶段测试开始==========================================
             - name: Prepare CapExp environment oriHasDataExpHasData
               uses: ./.github/actions/capacityExpansionUnionTest
               with:
@@ -171,6 +171,10 @@ jobs:
 
             - name: Run testReadOnly
               shell: bash
+              env:
+                  SERVICE_DIR: "/home/runner/work/IGinX/IGinX/.github/actions/service"
+                  SERVICE_DIR_MAC: "/Users/runner/work/IGinX/IGinX/.github/actions/service"
+                  SERVICE_DIR_WIN: "/d/a/IGinX/IGinX/.github/actions/service"
               run: |
                   mvn test -q -Dtest=${{ matrix.DB-name }}CapacityExpansionIT#testReadOnly -DfailIfNoTests=false -P-format
                   mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
