--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -112,6 +112,7 @@ jobs:
               shell: bash
               run: |
                   cd IGinX
+                  sudo sed -i 's/defaultUDFDir=udf_funcs/defaultUDFDir=../udf_funcs/g' conf/config.properties
                   mvn clean package -DskipTests -P-format -q
 
             - name: Change Old IGinX Config
