--- a/.github/workflows/tpc-h-pushdown.yml
+++ b/.github/workflows/tpc-h-pushdown.yml
@@ -111,6 +111,7 @@ jobs:
               shell: bash
               run: |
                   cd IGinX
+                  sudo sed -i 's/defaultUDFDir=udf_funcs/defaultUDFDir=${GITHUB_WORKSPACE}/udf_funcs/g' conf/config.properties
                   mvn clean package -DskipTests -P-format -q
 
             - name: Change Old IGinX Config
