--- a/.github/workflows/tpc-h.yml
+++ b/.github/workflows/tpc-h.yml
@@ -112,8 +112,8 @@ jobs:
               shell: bash
               run: |
                   cd IGinX
-                  sudo sed -i 's|defaultUDFDir=udf_funcs|defaultUDFDir=${GITHUB_WORKSPACE}/core/target/iginx-core-${VERSION}/udf_funcs|g' conf/config.properties
                   mvn clean package -DskipTests -P-format -q
+                  cp -rf ${GITHUB_WORKSPACE}/test/src/test/resources/tpch/udf/* core/target/iginx-core-${VERSION}/udf_funcs/python_scripts/
 
             - name: Change Old IGinX Config
               uses: ./.github/actions/confWriter
