--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -70,8 +70,8 @@ runs:
       shell: powershell
       run: |
         $url = 'https://www.python.org/ftp/python/3.13.0/python-3.13.0-amd64.exe'
-        Invoke-WebRequest -Uri $url -OutFile 'python.exe'
-        python.exe /quiet Include_freethreaded=1
+        Invoke-WebRequest -Uri $url -OutFile 'python-3.13.0-amd64.exe'
+        python-3.13.0-amd64.exe /quiet Include_freethreaded=1
         python3.13t -VV
 
     - if: inputs.free-thread-python-required=='true' && runner.os=='Linux'
@@ -104,7 +104,6 @@ runs:
         </array>
         </plist>
         EOF
-        
         sudo installer -pkg ./python-3.13.0-macos11.pkg \
             -applyChoiceChangesXML ./choicechanges.plist \
             -target /
