--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -79,7 +79,7 @@ runs:
       name: Setup Python3.13 on Windows
       shell: powershell
       run: |
-        if (${{ steps.cache-python-installer.outputs.cache-hit }} != 'true') {
+        if ("${{ steps.cache-python-installer.outputs.cache-hit }}" -ne "true") {
           $url = 'https://www.python.org/ftp/python/3.13.0/python-3.13.0-amd64.exe'
           Invoke-WebRequest -Uri $url -OutFile 'python-3.13.0-amd64.exe'
         }
@@ -100,9 +100,9 @@ runs:
       name: Setup Python3.13 on MacOS
       shell: bash
       run: |
-        if (${{ steps.cache-python-installer.outputs.cache-hit }} != 'true') {
+        if [ "${{ steps.cache-python-installer.outputs.cache-hit }}" != "true" ]; then
           curl -O https://www.python.org/ftp/python/3.13.0/python-3.13.0-macos11.pkg
-        }
+        fi
         cat > ./choicechanges.plist <<EOF
         <?xml version="1.0" encoding="UTF-8"?>
         <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
@@ -122,13 +122,14 @@ runs:
         sudo installer -pkg ./python-3.13.0-macos11.pkg \
             -applyChoiceChangesXML ./choicechanges.plist \
             -target /
-        rm -f python-3.13.0-macos11.pkg
         python3.13t -VV
 
     - if: inputs.free-thread-python-required=='true'
       name: Install pemjax in free-threading python
       shell: bash
       run: |
+        wget https://bootstrap.pypa.io/get-pip.py
+        python3.13t get-pip.py
         python3.13t -m pip install dependency/src/main/resources/python/pemjax-0.2.0.tar.gz
         python3.13t -m pip freeze list
 
