--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -71,7 +71,7 @@ runs:
       run: |
         $url = 'https://www.python.org/ftp/python/3.13.0/python-3.13.0-amd64.exe'
         Invoke-WebRequest -Uri $url -OutFile 'python-3.13.0-amd64.exe'
-        python-3.13.0-amd64.exe /quiet Include_freethreaded=1
+        .\python-3.13.0-amd64.exe /quiet Include_freethreaded=1
         python3.13t -VV
 
     - if: inputs.free-thread-python-required=='true' && runner.os=='Linux'
@@ -116,7 +116,7 @@ runs:
       run: |
         wget https://bootstrap.pypa.io/get-pip.py
         python3.13t get-pip.py
-        python3.13t -m pip install setuptools
+        python3.13t -m pip install setuptools distutils
         python3.13t -m pip install dependency/src/main/resources/python/pemjax-0.2.0.tar.gz
         python3.13t -m pip freeze list
 
