--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -117,7 +117,7 @@ runs:
         wget https://bootstrap.pypa.io/get-pip.py
         python3.13t get-pip.py
         python3.13t -m ensurepip --upgrade
-        python3.13t -m pip install setuptools wheel
+        python3.13t -m pip install setuptools wheel find-libpython
         python3.13t -m pip freeze list
         python3.13t -m pip install dependency/src/main/resources/python/pemjax-0.2.0.tar.gz
         python3.13t -m pip freeze list
