--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -72,6 +72,7 @@ runs:
         $url = 'https://www.python.org/ftp/python/3.13.0/python-3.13.0-amd64.exe'
         Invoke-WebRequest -Uri $url -OutFile 'python-3.13.0-amd64.exe'
         .\python-3.13.0-amd64.exe /quiet Include_freethreaded=1 PrependPath=1
+        Start-Sleep -Seconds 10
         python3.13t -VV
 
     - if: inputs.free-thread-python-required=='true' && runner.os=='Linux'
