--- a/.github/workflows/DB-CE.yml
+++ b/.github/workflows/DB-CE.yml
@@ -123,7 +123,7 @@ jobs:
 
             - name: ${{ matrix.test-way }} Normal IT
               shell: bash -el {0}
-              run: mvn test -q -Dtest=${FUNCTEST} -DfailIfNoTests=false -P-format
+              run: mvn test -q -Dtest=${{ inputs.functest }} -DfailIfNoTests=false -P-format
 
             - name: Show IGinX log
               if: always()
