--- a/conf/config.properties
+++ b/conf/config.properties
@@ -131,6 +131,10 @@ parallelGroupByPoolNum=5
 # ParallelGroupBy线程池数量
 streamParallelGroupByWorkerNum=5
 
+executionBatchRowCount=3970
+groupByInitialGroupBufferCapacity=31
+pipelineParallelism=5
+
 ####################
 ### Migration 相关配置
 ####################
