--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -78,10 +78,10 @@ database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHE
 is_support_full_join=true
 
 # filter中正则匹配的符号（达梦使用 REGEXP）
-regex_like_symbol=REGEXP
+regex_like_symbol=REGEXP_LIKE
 
 # filter中不匹配正则表达式的符号
-not_regex_like_symbol=NOT REGEXP
+not_regex_like_symbol=NOT REGEXP_LIKE
 
 # jdbc元数据获取是否支持特殊字符识别
 jdbc_support_special_char=false
