--- a/dataSource/relational/src/main/resources/dameng-meta.properties
+++ b/dataSource/relational/src/main/resources/dameng-meta.properties
@@ -76,7 +76,8 @@ upsert_statement = WHEN MATCHED THEN UPDATE SET
 upsert_conflict_statement= %s.%s = source.%s
 
 # 获取数据库列表的SQL语句
-database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHERE object_type='SCH' AND OWNER='SYSDBA';
+#database_query_sql=SELECT DISTINCT object_name TABLE_SCHEMA FROM all_objects WHERE object_type='SCH' AND OWNER='SYSDBA';
+database_query_sql=SELECT DISTINCT SUBSTR(table_name, 1, INSTR(table_name, '.') - 1) AS DATNAME FROM user_tables WHERE table_name LIKE 'unit%.%'
 
 dummy_database_query_sql=SELECT DISTINCT owner AS DATNAME FROM all_tables
 
