--- a/.github/actions/context/action.yml
+++ b/.github/actions/context/action.yml
@@ -121,6 +121,7 @@ runs:
           shell: wsl-run {0}
           run: |
               apt update && apt upgrade -y
+              sudo apt install -y openjdk-8-jdk        
               sudo apt install -y expect
               expect $(wslpath "${GITHUB_WORKSPACE}")/.github/scripts/test/cli/test_expansion.exp ${{ steps.current-version.outputs.version }}
               if [[ $? -eq 0 ]]; then
