--- a/.github/workflows/cluster-test.yml
+++ b/.github/workflows/cluster-test.yml
@@ -63,7 +63,9 @@ jobs:
             - name: Copy IGinX
               shell: bash
               run: |
+                  mkdir IGinX-6889
                   cp -r core/target/iginx-core-* IGinX-6889
+                  mkdir IGinX-6890
                   cp -r core/target/iginx-core-* IGinX-6890
 
             - name: Modify IGinX-6889 Config
